github user fetched

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.github-profile{
+  margin: 10px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.github-profile .info{
+  display: inline-block;
+  margin-left: 12px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.github-profile img{
+  width: 75px;
+}
+
+.formData{
+  background-color: darkgray;
+  padding: 20px;
+  width: 300px;
+}
+.formData input{
+  height: 20px;
+  padding: 10px;
+  margin-right: 5px;
+}
+.formData button{
+  padding: 10px;
+  background-color: darkgray;
+  width: 100px;
+  color: aqua;
 }
